# magazine-authors-data-processing

./: .gitignore  LICENSE  README.md  magazine_author_types.ipynb  magazine_authors_merge_cleaned.ipynb  magazine_authors_name_parser.py  magazine_authors_parser.py  pyproject.toml
